--- a/mjc-blog/assets/css/extended/blank.css
+++ b/mjc-blog/assets/css/extended/blank.css
@@ -1,7 +1,29 @@
 :root {
-    --nav-width: 1380px;
+
+    --footer-height: 40px;
+    /*--content-gap: 20px;*/
+    /*--content: rgb(80, 80, 80);*/
+    --hljs-bg: rgb(28, 29, 33);
+    /* --hljs-bg: rgb(44, 44, 44); */
+    /*--code-bg: rgb(235, 235, 235);*/
+    --code-bg: rgb(240, 240, 240);
+    --code-bg-border: rgb(200, 200, 200);
+    --black: rgb(0, 0, 0);
+    --white: rgb(255, 255, 255);
+    --tag: rgb(235, 235, 235);
+
+    --nav-width: 1300px;
     --article-width: 650px;
     --toc-width: 300px;
+}
+
+.main {
+    max-width: calc(var(--main-width) + var(--gap) * 5);
+}
+
+/*页面顶部栏两边宽度*/
+.nav {
+    max-width: calc(var(--nav-width) + var(--gap) * 10);
 }
 
 body {
@@ -15,12 +37,12 @@ body {
     font-family: "YH", "SCP", sans-serif;
 }
 
-/* .post-content pre,code {
-  font-family: 'SCP', sans-serif;
-  font-size: 10;
-  line-height: 1.2;
-  max-height: 40rem;
-} */
+@media screen and (min-width: 768px) {
+    ::-webkit-scrollbar {
+        width: 13px;
+        height: 13px;
+    }
+}
 
 .toc {
     margin: 0 2px 40px 2px;
