--- a/mjc-blog/assets/css/extended/code.css
+++ b/mjc-blog/assets/css/extended/code.css
@@ -28,12 +28,12 @@
 }
 
 .post-content :not(table) ::-webkit-scrollbar-thumb {
-    border: 5px solid var(--hljs-bg);
+    border: 5px solid var(--code-block-bg);
 }
 
 /*解决角落显示方块问题*/
 ::-webkit-scrollbar-corner {
-    background-color: var(--hljs-bg);
+    background-color: var(--code-block-bg);
     border-radius: 10px;
 }
 
