--- a/mjc-blog/assets/css/extended/fonts.css
+++ b/mjc-blog/assets/css/extended/fonts.css
@@ -4,6 +4,6 @@
 }
 
 @font-face {
-    font-family: "ZZHT";
-    src: url("/fonts/NotoSansSC-Regular.woff2") format("woff2");
+    font-family: "YH";
+    src: url("/fonts/YouHei.woff2") format("woff2");
 }
