--- a/mjc-blog/assets/css/extended/blank.css
+++ b/mjc-blog/assets/css/extended/blank.css
@@ -29,12 +29,12 @@
 body {
     font-size: 18px;
     line-height: 1.6;
-    font-family: "ZZHT", "SCP", sans-serif;
+    font-family: "YH", "SCP", sans-serif;
 }
 
 .post-content {
     /*color: var(--secondary);*/
-    font-family: "ZZHT", "SCP", sans-serif;
+    font-family: "YH", "SCP", sans-serif;
 }
 
 @media screen and (min-width: 768px) {
